--- a/kc-web/index.html
+++ b/kc-web/index.html
@@ -44,9 +44,13 @@
         <nav class="nav" aria-label="Birincil">
           <button class="nav-toggle" aria-expanded="false" aria-controls="nav-menu" title="Menü">☰</button>
           <ul id="nav-menu" class="nav-list">
-            <li><a href="./about.html">Hakkımızda</a></li>
-            <li><a href="./updates.html">Güncellemeler</a></li>
-            <li><a href="#contact">İletişim</a></li>
+            <li><a href="./index.html">Ana Sayfa</a></li>
+            <li><a href="./donate.html">Bağış Yap</a></li>
+            <li><a href="./streams.html">Canlı Yayınlar</a></li>
+            <li><a href="./cart.html">Sepet</a></li>
+            <li><a href="./profile.html">Profil</a></li>
+            <li><a href="./login.html">Giriş</a></li>
+            <li><a href="./register.html">Kayıt</a></li>
           </ul>
         </nav>
         <div class="badge reveal">YAKINDA</div>
