feat(admin): UI/UX overhaul, class-based dark mode, global UI utils, Streams/Reports redesign, Users online/etkin status; backend donations/streams animal_type/animal_count/slaughter_intent; safer API base/parse

--- a/kurban-cebimde/admin-panel/index.html
+++ b/kurban-cebimde/admin-panel/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light dark" />
+    <meta name="theme-color" content="#0b1220" />
     <title>Kurban Cebimde Admin Panel</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+      // Tema FOUC engelle: localStorage'daki tema tercihini en erken aşamada uygula
+      (function(){
+        try {
+          var saved = localStorage.getItem('admin-theme');
+          var root = document.documentElement;
+          if (saved === 'dark' || (!saved && window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+            root.classList.add('dark');
+          } else {
+            root.classList.remove('dark');
+          }
+        } catch (e) {}
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
